Fix workflow modal overflow

--- a/assets/styles/components/_card.scss
+++ b/assets/styles/components/_card.scss
@@ -9,7 +9,6 @@ $card-colors: (
 .card {
   --card-color: var(--c-gray);
 
-  display: block;
   padding: 1.875rem;
 
   background: var(--c-white);
